Sync all content

--- a/content/resources/14-06s04.md
+++ b/content/resources/14-06s04.md
@@ -5,9 +5,11 @@ description: Image of currency and coins. (Image courtesy of U.S. Department of 
 file: /courses/14-06-intermediate-macroeconomic-theory-spring-2004/f9bed8115c2b43da40c1ecb4bedf5e10_14-06s04.jpg
 file_size: 57765
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
-  caption: "Image of currency and coins. (Image courtesy of\_{{% resource_link \"\
-    eb02c927-b925-4e71-9990-804c13981719\" \"U.S. Department of the Treasury\" %}}.)"
+  caption: "Image of currency and coins. (Image courtesy of\_[U.S. Department of the\
+    \ Treasury](http://www.ustreas.gov/index.html).)"
   credit: ''
   image-alt: Image of currency and coins.
 learning_resource_types: []
