--- a/content/resources/14-06s04-th.md
+++ b/content/resources/14-06s04-th.md
@@ -4,9 +4,11 @@ description: ''
 file: /courses/14-06-intermediate-macroeconomic-theory-spring-2004/0dcd7931ef476ec9cdc59212a21ab7a7_14-06s04-th.jpg
 file_size: 11146
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
-  caption: "Image of currency and coins. (Image courtesy of\_{{% resource_link \"\
-    eb02c927-b925-4e71-9990-804c13981719\" \"U.S. Department of the Treasury\" %}}.)"
+  caption: "Image of currency and coins. (Image courtesy of\_[U.S. Department of the\
+    \ Treasury](http://www.ustreas.gov/index.html).)"
   credit: ''
   image-alt: Image of currency and coins.
 learning_resource_types: []
