--- a/content/resources/1406fexam_s04.md
+++ b/content/resources/1406fexam_s04.md
@@ -4,6 +4,8 @@ description: Final examination problems.
 file: /courses/14-06-intermediate-macroeconomic-theory-spring-2004/cbc105b99659482969c5ae34db15dd0e_1406fexam_s04.pdf
 file_size: 80437
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Exams
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
