Sync all content

--- a/content/resources/14-06s04-th.md
+++ b/content/resources/14-06s04-th.md
@@ -5,8 +5,8 @@ file: /courses/14-06-intermediate-macroeconomic-theory-spring-2004/0dcd7931ef476
 file_size: 11146
 file_type: image/jpeg
 image_metadata:
-  caption: "Image of currency and coins. (Image courtesy of\_[U.S. Department of the\
-    \ Treasury](http://www.ustreas.gov/index.html).)"
+  caption: "Image of currency and coins. (Image courtesy of\_{{% resource_link \"\
+    62c6c66d-455e-4dc2-8ecb-09f102cc7b66\" \"U.S. Department of the Treasury\" %}}.)"
   credit: ''
   image-alt: Image of currency and coins.
 learning_resource_types: []
